--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <h1>CSE 124BR</h1>
-<a href="https://youtu.be/_4juf1NcuEc">Explain Your Program Video</a>
+<a href="https://youtu.be/_TqL9gAxXg4">Explain Your Program Video</a>
