--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <h1>CSE 124BR</h1>
-<a href="https://youtu.be/_TqL9gAxXg4">Explain Your Program Video: Sequencing</a>
-<a href="https://youtu.be/k5znKn11NEE">Explain Your Program Video: Repeats</a>
+<a href="https://youtu.be/_TqL9gAxXg4">1. Explain Your Program Video: Sequencing</a> <br>
+<a href="https://youtu.be/k5znKn11NEE">2. Explain Your Program Video: Repeats</a>
