changed p tag to div

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <h1>CSE 124BR</h1>
-<p>1. </p> <a href="https://youtu.be/_TqL9gAxXg4">Explain Your Program Video: Sequencing</a> <br>
-<p>2. </p> <a href="https://youtu.be/k5znKn11NEE">Explain Your Program Video: Repeats</a>
+<div>1. 
+    <a href="https://youtu.be/_TqL9gAxXg4">Explain Your Program Video: Sequencing</a>
+</div> 
+<br>
+<div>2. 
+    <a href="https://youtu.be/k5znKn11NEE">Explain Your Program Video: Repeats</a>
+</div>
