updated with video links

--- a/index.html
+++ b/index.html
@@ -11,3 +11,11 @@
 <div>3. 
     <a href="https://youtu.be/xuVdylT6x1g">Quest Section Code Explanation</a>
 </div>
+<br>
+<div>4. 
+    <a href="https://youtu.be/szmN4PYXWDw">Explain Your Program Video: Nested Repeats</a>
+</div>
+<br>
+<div>5. 
+    <a href="https://youtu.be/oA_UVnCbE8g">Explain Your Program Video: Events</a>
+</div>
