added variables video

--- a/index.html
+++ b/index.html
@@ -19,3 +19,7 @@
 <div>5. 
     <a href="https://youtu.be/oA_UVnCbE8g">Explain Your Program Video: Events</a>
 </div>
+<br>
+<div>6. 
+    <a href="https://youtu.be/Xniacf3s_Fs">Explain Your Program Video: Variables</a>
+</div>
