Uploaded conditional loops video

--- a/index.html
+++ b/index.html
@@ -23,3 +23,8 @@
 <div>6. 
     <a href="https://youtu.be/Xniacf3s_Fs">Explain Your Program Video: Variables</a>
 </div>
+<br>
+<div>7. 
+    <a href="https://youtu.be/DzokEcAZyQQ">Explain Your Program Video: Conditional Loops</a>
+</div>
+
