--- a/index.html
+++ b/index.html
@@ -27,4 +27,8 @@
 <div>7. 
     <a href="https://youtu.be/DzokEcAZyQQ">Explain Your Program Video: Conditional Loops</a>
 </div>
+<br>
+<div>8. 
+    <a href="https://youtu.be/CdM4eBGisTI">Explain Your Program Video: If Statements</a>
+</div>
 
