added video links

--- a/index.html
+++ b/index.html
@@ -31,4 +31,11 @@
 <div>8. 
     <a href="https://youtu.be/CdM4eBGisTI">Explain Your Program Video: If Statements</a>
 </div>
-
+<br>
+<div>9. 
+    <a href="https://youtu.be/cQOWeo8h6uI">Explain Your Program Video: Nested If/Else</a>
+</div>
+<br>
+<div>10. 
+    <a href="https://youtu.be/8Ct3b3egZeg">Explain Your Program Video: Compound Conditionals</a>
+</div>
