added Lists video

--- a/index.html
+++ b/index.html
@@ -43,3 +43,7 @@
 <div>11. 
     <a href="https://youtu.be/F9Tpyh9Vz-A">Explain Your Program Video: Abstraction</a>
 </div>
+<br>
+<div>12. 
+    <a href="https://youtu.be/mBtNphqRQsY">Explain Your Program Video: Lists</a>
+</div>
